Fix homepage banner CTA on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -110,7 +110,7 @@ section {
 }
 
 .main-cta {
-  margin-top:60px;
+  margin-top:30px;
 }
 
 .main-cta .btn{
